tests/compile-fail/reserved/try_match_no_arms.stderr
error: unexpected end of macro invocation
 --> tests/compile-fail/reserved/try_match_no_arms.rs:2:44
  |
2 |     let _ = try_match::try_match!(Some(42),);
  |                                            ^ missing tokens in macro arguments
